--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,19 +9,26 @@
         android:background="#FEDBA8"
         android:orientation="vertical">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/button_shape"
-            android:paddingBottom="12dp"
-            android:paddingLeft="40dp"
-            android:paddingRight="40dp"
-            android:paddingTop="12dp"
-            android:text="@string/app_name"
-            android:textSize="22sp" />
+        <!--<Button-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="80dp"-->
+            <!--android:background="@drawable/button_shape"-->
+            <!--android:paddingBottom="12dp"-->
+            <!--android:paddingLeft="40dp"-->
+            <!--android:paddingRight="40dp"-->
+            <!--android:paddingTop="12dp"-->
+            <!--android:text="@string/app_name"-->
+            <!--android:textSize="22sp" />-->
 
+        <Button
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/tangdaizi"
+        />
         <EditText
             android:layout_width="280dp"
             android:layout_height="wrap_content"
@@ -108,24 +115,24 @@
         <ImageView
             android:layout_marginRight="46dp"
             android:layout_marginLeft="46dp"
-            android:id="@+id/iv1"
+            android:id="@+id/iv_weibo"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/tencent_weixin"/>
+            android:src="@drawable/weibo"/>
 
         <ImageView
-            android:id="@+id/iv2"
+            android:id="@+id/iv_weixin"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_toLeftOf="@id/iv1"
-            android:src="@drawable/sina_weibo" />
+            android:layout_toLeftOf="@id/iv_weibo"
+            android:src="@drawable/weixin" />
 
         <ImageView
-            android:id="@+id/iv3"
+            android:id="@+id/iv_qq"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_toRightOf="@+id/iv1"
-            android:src="@drawable/tencent_qq"/>
+            android:layout_toRightOf="@+id/iv_weibo"
+            android:src="@drawable/qq"/>
     </RelativeLayout>
 </RelativeLayout>
