--- a/app/src/main/res/drawable/login_weibo_button.xml
+++ b/app/src/main/res/drawable/login_weibo_button.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="#1EBC21"/>
+    <solid android:color="#FD8224"/>
     <corners
         android:bottomLeftRadius="8dp"
         android:bottomRightRadius="8dp"
         android:topLeftRadius="8dp"
         android:topRightRadius="8dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/darker_gray"/>
+    <!--<stroke-->
+        <!--android:width="1dp"-->
+        <!--android:color="@android:color/darker_gray"/>-->
 </shape>
+
