--- a/app/src/main/res/layout/login_weixin.xml
+++ b/app/src/main/res/layout/login_weixin.xml
@@ -12,7 +12,7 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/chahao"
+            android:id="@+id/image_back"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerVertical="true"
