--- a/app/src/main/res/layout/main_tab_01.xml
+++ b/app/src/main/res/layout/main_tab_01.xml
@@ -54,6 +54,8 @@
                         android:layout_weight="1">
 
                         <ImageView
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_alignParentBottom="true"
@@ -75,6 +77,8 @@
                         android:layout_weight="1">
 
                         <ImageView
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="8dp"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_alignParentBottom="true"
@@ -125,6 +129,8 @@
                         android:layout_weight="1">
 
                         <ImageView
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginLeft="8dp"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_alignParentBottom="true"
@@ -146,6 +152,8 @@
                         android:layout_weight="1">
 
                         <ImageView
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginRight="8dp"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_alignParentBottom="true"
