--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -60,7 +60,7 @@
 
 
         <TextView
-            android:id="@+id/no_account"
+            android:id="@+id/registe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
