--- a/app/src/main/res/layout/main_tab_03.xml
+++ b/app/src/main/res/layout/main_tab_03.xml
@@ -26,7 +26,7 @@
 				android:layout_height="0dp">
 				<ImageView
 					android:scaleType="fitXY"
-					android:src="@drawable/gaoshi"
+					android:src="@drawable/gongyi"
 					android:layout_width="match_parent"
 					android:layout_height="match_parent" />
 			</RelativeLayout>
