--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -10,8 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="微信"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textColor="#4E4954"
+        android:textSize="20sp" />
 
 </RelativeLayout>
