--- a/app/src/main/res/layout/login_qq.xml
+++ b/app/src/main/res/layout/login_qq.xml
@@ -63,7 +63,7 @@
             android:layout_height="70dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:src="@mipmap/icon" />
+            android:src="@mipmap/logo" />
 
         <TextView
             android:layout_marginBottom="20dp"
