--- a/app/src/main/res/layout/login_weibo.xml
+++ b/app/src/main/res/layout/login_weibo.xml
@@ -63,7 +63,7 @@
             android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:layout_toRightOf="@id/change"
-            android:src="@mipmap/icon" />
+            android:src="@mipmap/logo" />
 
         <TextView
             android:layout_marginTop="8dp"
