--- a/app/src/main/res/layout/login_weixin.xml
+++ b/app/src/main/res/layout/login_weixin.xml
@@ -40,7 +40,7 @@
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
-        android:src="@mipmap/icon" />
+        android:src="@mipmap/logo" />
 
     <TextView
         android:layout_width="wrap_content"
