--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -30,6 +30,7 @@
         android:background="@drawable/tangdaizi"
         />
         <EditText
+            android:id="@+id/name"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -39,6 +40,7 @@
             android:theme="@style/MyEditText" />
 
         <EditText
+            android:id="@+id/pass"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
